--- a/snorkel_locations.html
+++ b/snorkel_locations.html
@@ -75,7 +75,11 @@
       <div id="slider"> 
         
         <!-- START slideshow --> 
-        <img id="one" src="img/mantaray.jpg" /> <img id="two" src="img/manta2.JPG" /> <img id="three" src="img/manta3.JPG" /> <img id="four" src="img/manta4.JPG" /> <img id="five" src="img/manta5.jpg" />
+        <img id="one" src="img/mantaray.jpg" /> 
+        <img id="two" src="img/mantaray.JPG" />
+         <img id="three" src="img/mantaray.JPG" /> 
+         <img id="four" src="img/mantaray.JPG" /> 
+         <img id="five" src="img/manta5.jpg" />
         <ul>
           <li> <a href="#one">1</a> </li>
           <li> <a href="#two">2</a> </li>
