--- a/snorkel_locations.html
+++ b/snorkel_locations.html
@@ -248,6 +248,8 @@
   </footer>
 </div>
 <script>
+
+<!--JavaScript Code for Responsive Nav Bar-->
 function myFunction() {
     var x = document.getElementById("mynav");
     if (x.className === "nav") {
@@ -257,7 +259,7 @@ function myFunction() {
     }
 }
 
-
+<!--JavaScript Code for Page so that not all of the content above is visible at the same time-->
 
             function show(elementID) {
             
