--- a/hawaii.html
+++ b/hawaii.html
@@ -19,7 +19,7 @@
         <li><a href="index.html">Home</a> </li>
         <li><a style="color:white;" class="nav2"  href="snorkel_locations.html">Snorkel Locations</a> </li>
         <li><a href="travel_blog.html">Travel Blog</a></li>
-        <li><a>About</a></li>
+       <li><a href="mailto:schmamy@gmail.com" target="_blank">Contact Me</a></li>
         <li class="icon"> <a href="javascript:void(0);" style="font-size:15px;" onclick="myFunction()">&#9776;</a> </li>
       </ul>
     </div>
@@ -32,7 +32,7 @@
     <div class="subheader" id="top"> <img src="img/Hawaii_map_new.png" alt="hawaii, map of hawaii, snorkel in hawaii, snorkel guide hawaii" usemap="#hawaii">
       <map name="hawaii">
         <area shape="rect" coords="12,16,132,132" href="#kauai">
-        <area shape="rect" coords="144,51,260,147" href="#oahu">
+        <area shape="rect" coords="143,50,259,146" href="#oahu">
         <area shape="rect" coords="272,76,391,192" href="#maui">
       </map>
       HAWAII</div>
