--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div style="padding:40px"> <img src="img/snorkel3.jpg" alt="snorkel, snorkeling, snorkel guide"></div>
       <div style="padding:50px">
         <h1 >Grab a Mask and Jump In</h1>
-        Hi my name is Amy.  I am here to share with you my knowledge and experience of different snorkeling locations around the world.  All of the information on this site is based on personal experience.  I am excited to share with you my experiences and knowledge and to answer any questions you have. </div>
+        Hi my name is Amy.  I am here to share with you my knowledge and experience of different snorkeling locations around the world.  All of the information on this site is based on personal experience.  I am excited to share with you my experiences and knowledge and to answer any questions you have about snorkeling and travel. </div>
     </div>
   </div>
   <br>
